	Fixed: #IP-1396 Deletion of a subdomain which has '/' as mount point deletes all web folders
	Fixed: #IP-1399 Add Auto-Submitted Header to Autoreply Emails
	Fixed: #IP-1401 Courier pop3/imap SSL don't work with some clients - Diffie-Hellman parameters length is too small
	Fixed: #IP-1410 Feature - Possibility to change redirection type

------------------------------------------------------------------------------------------------------------------------
1.2.9
------------------------------------------------------------------------------------------------------------------------

2015-07-03: Laurent Declercq
	RELEASE i-MSCP 1.2.9

BACKEND
	Added: Dedicated server implementation for remote SQL server
	Added: NAMED_BNAME (named binary name) configuration parameter - Named (Bind9) server impl.
	Changed: Customers have now a full read access to their http logs, including those which were rotated
	Changed: Domain's logs are now mounted in customer's logs folder using bind mount instead of being copied
	Fixed: closedir() attempted on invalid dirhandle DIRH at line 312 (iMSCP::Dir)
	Fixed: Due to logs rotation, some httpd logs are never copied into customer's log folders
	Fixed: File /etc/mysql/conf.d/imscp.cnf not loaded when using Percona DB server due to missing /etc/mysql/my.cnf file
	Fixed: POP3 SSL and IMAP SSL services must be disabled when SSL is disabled for the services - Courier server impl.
	Fixed: The .my.cnf file is no longer used and thus, must be removed
	Fixed: Set timezone according TIMEZONE configuration parameter (iMSCP::Bootstrapper::boot())
	Rewritten: iMSCP::Dir library

CONFIGS
	Added: ADM_GROUP configuration parameter
	Added: courier-authdaemon init script - Status command from init script provided by Debian/Ubuntu do not work
	Added: mysql.data configuration file
	Added: percona 5.5/5.6 in Debian Jessie package file
	Added: percona 5.5/5.6 in Ubuntu Vivid Vervet package file
	Added: Respawn limit for imscp_daemon and imscp_panel upstart jobs